[package]
name = "chapter-04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.87"
tokio = {version = "1.22.0",features = ["full"]}
warp = "0.3.3"
serde = { version = "1.0", features = ["derive"] }